<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:padding="16dp"
            android:textSize="25dp"/>

        <ImageView
            android:id="@+id/calculator_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/calculator_image"
            android:adjustViewBounds="true"
            android:maxHeight="160dp"/>

        <TextView
            android:id="@+id/first_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_number_text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/first_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_number_hint"
            android:inputType="number"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/second_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_number_text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/second_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/second_number_hint"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TableRow
            android:id="@+id/button_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_btn_text"
                android:textSize="10dp" />

            <Button
                android:id="@+id/substract_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/sub_btn_text"
                android:textSize="10dp" />

            <Button
                android:id="@+id/multiply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/mul_btn_text"
                android:textSize="10dp" />

            <Button
                android:id="@+id/divide_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textSize="10dp"
                android:text="@string/div_btn_text"/>

        </TableRow>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_text"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="30dp" />

    </LinearLayout>

</layout>